# r1_experimentation

./: .pylintrc  main.py  pyproject.toml  setup.py  start_agent.sh  testing.py
hidden_t/: test_agent.py  test_env.py  test_isolation.py
src/: __init__.py  agent.py  config.py  constants.py  envs.py  interface.py  isolation.py  llm_utils.py  main.py  reflection.py  tools.py  utils.py
tests/: test_agent.py  test_all.py  test_env.py  test_interface.py
