[tool.poetry]
name = "r1_experimentation"
version = "0.1.0"
description = "Experimentation with R1 models"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
litellm = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["hidden_t", "__pycache__"]
